--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@
 
 body {
 }
+
+.mathInput > input {
+  text-align: center;
+}
+.mathInput > input::-webkit-outer-spin-button,
+.mathInput > input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;  
+}
