refactor: Refactored <App /> state to use more Redux
Currently storing expressions in the redux state
<App /> now houses logic from previous implementation of <MathDisplay />
Began skeleton of redesign/refactor for <AnswerList />

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,16 @@
   flex-direction: column;
 }
 
+.answerList {
+  display: flex;
+}
+
 body {
+}
+
+.expressionAnswerContainer {
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .mathInput {
