style: Added styling to <AnswerList />

--- a/src/index.css
+++ b/src/index.css
@@ -6,23 +6,57 @@
 
 .answerList {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  max-width: 180px;
+}
+
+.answerListExpression {
+  background-color: black;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  color: white;
+  width: 100%;
+}
+
+.answerListAnswer {
+  background-color: grey;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: white;
+  width: 100%;
 }
 
 body {
 }
 
 .expressionAnswerContainer {
-  border: 1px solid black;
+  align-items: center;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 45px;
+  margin: 5px;
+}
+
+.expressionAnswerElement {
+  text-align: center;
+  width: 100%;
 }
 
 .mathInput {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 180px;
 }
 .mathInput > input {
+  font-size: 24px;
+  height: 50px;
   text-align: center;
+  width: 100%;
 }
 .mathInput > input::-webkit-outer-spin-button,
 .mathInput > input::-webkit-inner-spin-button {
@@ -36,6 +70,7 @@ body {
   border-radius: 50%;
   color: white;
   display: flex;
+  font-size: 18px;
   height: 50px;
   justify-content: center;
   margin: 5px;
@@ -51,5 +86,5 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  max-width: 180px;
+  width: 100%;
 }
